--- a/Prog3Practis1/MainWindow.xaml
+++ b/Prog3Practis1/MainWindow.xaml
@@ -1,14 +1,22 @@
-﻿<Window x:Class="Prog3Practis3.MainWindow"
+﻿<Window x:Class="Prog3Practis1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Prog3Practis3"
+        xmlns:local="clr-namespace:Prog3Practis1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" SizeToContent="WidthAndHeight" MinHeight="150" MinWidth="250">
-    <Grid>
-        <Button x:Name="button" Content="Reset" HorizontalAlignment="Right" Margin="20,20" VerticalAlignment="Bottom" Click="ResetSlider"/>
-        <Slider x:Name="slider" HorizontalAlignment="Left" Margin="106,31,0,0" VerticalAlignment="Top" Width="120" Minimum="0" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="true" Value="50" ValueChanged="ApplySliderChange"/>
-        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="31,32,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top"/>
+        Title="MainWindow" SizeToContent="WidthAndHeight" MinHeight="150" MinWidth="250">
+    <Grid Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.75*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="button" Content="Reset" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="ResetSlider" Grid.Column="1" Grid.Row="1"/>
+        <Slider x:Name="slider" Value="50" MinHeight="10" MinWidth="150" HorizontalAlignment="Stretch" VerticalAlignment="Center" Minimum="0" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="true" Grid.Row="0" Grid.Column="1"/>
+        <Label x:Name="text" Content="{Binding ElementName=slider, Path=Value, Mode=OneWay}" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
     </Grid>
 </Window>
