--- a/Prog3 Practis3.1/EditorStudent.xaml
+++ b/Prog3 Practis3.1/EditorStudent.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Prog3_Practis3._1.MainWindow"
+﻿<Window x:Class="Prog3_Practis3._1.EditorStudent"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Prog3_Practis3._1"
         mc:Ignorable="d"
-        Title="MainWindow" SizeToContent="WidthAndHeight">
+        Title="EditorStudent" SizeToContent="WidthAndHeight">
     <Grid MinWidth="200">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -15,9 +15,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Label Content="Name" Grid.Row="0" Grid.Column="0"/>
-        <Label Content="{Binding Path=Name}" Grid.Row="0" Grid.Column="1"/>
-        <Label Content="Matrikelnummer" Grid.Row="1" Grid.Column="0"/>
-        <Label Content="234" Grid.Row="1" Grid.Column="1"/>
+        <Label Content="Matrikelnummer" Grid.Row="0" Grid.Column="0"/>
+        <TextBox Name="mart" Text="" Grid.Row="0" Grid.Column="1"/>
     </Grid>
 </Window>
