Finish Task3.1 Prog3

--- a/Prog3 Practis3.2/MainWindow.xaml
+++ b/Prog3 Practis3.2/MainWindow.xaml
@@ -2,16 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="300" Width="300"
-        DataContext="{___5___}">
+        DataContext="{Binding RelativeSource={x:Static RelativeSource.Self}}">
     <StackPanel>
         <Label Name="A">1234</Label>
 
-        <Label Name="B" Content="{Binding ___6___}"/>
+        <Label Name="B" Content="{Binding ElementName=A, Path=Content}"/>
 
-        <Label Name="C" DataContext="{Binding ___7___}" Content="{Binding ___8___}"/>
+        <Label Name="C" DataContext="{Binding Path=MyObject}" Content="{Binding Path=MyField}"/>
 
-        <Label Name="D" Content="{Binding ___9___}" />
+        <Label Name="D" Content="{Binding Path=MyField}" />
 
-        <Button Click="___10___">Change</Button>
+        <Button Click="Change">Change</Button>
     </StackPanel>
 </Window>
